--- a/src/v03/botteghe-di-suono/2025-09-10-botteghe-di-suono.tex
+++ b/src/v03/botteghe-di-suono/2025-09-10-botteghe-di-suono.tex
@@ -1,13 +1,12 @@
 %-------------------------------------------------------------------------------
-\section*{del soffio sconosciuto}
+% \section*{del soffio sconosciuto}
 %-------------------------------------------------------------------------------
-
 \begin{quote}
   \begin{sf}
     \small
     \begin{description}
       \item[Bremonte:] Mi viene in mente, dicevo, una confidenza che X. m’ha
-      fatto su quell’epoca eroica di ricerca sonora.
+      fatto su quell’epoca eroica di ricerca sonora. \cite{bertoncini07}
     \end{description}
   \end{sf}
 \end{quote}
@@ -21,37 +20,55 @@ sull'equilibrio \emph{opera-operazione} messo in scena. La sua scrittura è un
 teatro dell'intelletto, un'immaginario e, insieme, uno scenario, quindi uno
 spazio scenico e un'ambientazione, dove il pensiero si rappresenta attraverso
 persone multiple, in una forma possibile di \emph{sympòsion} emergente. Una
-vetta di comunicazione indiretta che svetta su una pianura di informazione.
+vetta di comunicazione indiretta \cite{ronchi2001} che svetta su una pianura di
+informazione.
 
-\emph{Bremonte}: è una \emph{parola-strumento}. {\phonfont Bre-}, come brezza,
-come breath, come l'espansione in un gonfiare\footnote{Pokorny IEW 146, 167-68,
-  169, 170-71, 171-72. {\phonfont bhes-} (soffiare, respirare): radice imitativa
-  fondamentale per il vocabolario respiratorio nelle lingue indo-europee;
-  {\phonfont bhreu-} (gonfiare, germogliare): radice collegata ai processi di
-  espansione e crescita {\phonfont bhreus-} (bollire, suonare): radice con campo
-  semantico che include fenomeni acustici e movimento turbolento}.
+\emph{Bremonte}: è una \emph{parola-strumento}. {\phonfont *Bre-}, come brezza,
+come \emph{breath}, come l'espansione in un gonfiare\footnote{Pokorny IEW 146,
+  167-68, 169, 170-71, 171-72. {\phonfont *bhes-} (soffiare, respirare): radice
+  imitativa fondamentale per il vocabolario respiratorio nelle lingue indo-europee;
+  {\phonfont *bhreu-} (gonfiare, germogliare): radice collegata ai processi di
+  espansione e crescita {\phonfont *bhreus-} (bollire, suonare): radice con campo
+  semantico che include fenomeni acustici e movimento turbolento.}.
 \emph{Bremonte} è il monte che soffia, il monte che respira. La brezza è il vento
 catabatico, fresco, ciclico, il vento soffiato dalla montagna sulla valle.
-Bremonte è, come ogni opera di Bertoncini, un enigma naturale, un momento
+\emph{Bremonte} è, come ogni opera di Bertoncini, un enigma naturale, un momento
 di realtà. L'esplorazione umana è mossa dalla volontà di decodifica di enigmi,
 la realtà del mondo necessità volontà di soluzione, che poi chiamiamo verità,
-verità supposte\ldots
+verità supposte\ldots~%a creazione di enigmi è tensione, tendenza alla natura. 
 
 %L'uso di \emph{X.} per l'io autobiografico rivela un tratto fondamentale: nel
-Nel momento stesso in cui l'artista cerca di catturare la propria esperienza
-attraverso la scrittura, diventa \emph{altro} da sé. \emph{X.} non è
-semplicemente un espediente stilistico, ma l'incarnazione di quello che Blanchot \cite{fare_ref}
-chiama «il neutro» — quella dimensione anonima in cui l'autore si dissolve
-nell'atto stesso della creazione. \emph{X.} materializza questa dismissione:
-l'io più intimo diventa l'incognita più radicale perché la scrittura trasforma
-il soggetto scrivente in oggetto scritto. \emph{X.} come \emph{chi} (χ), “cosa
-sconosciuta”, mostra come l'atto autobiografico, anziché rivelare il sé, ne
-sveli l'irraggiungibilità.
+Nel momento stesso in cui l'autore\footnote{%
+  La parola autore deriva dal latino \emph{auctor}, che affonda le sue radici
+  nel verbo \emph{augēre}, significante “far crescere”, “aumentare”, “dare
+  incremento”. L'autore è chi fa crescere qualcosa dal nulla, chi aumenta la
+  realtà attraverso la creazione. La parola greca più vicina ad \emph{auctor} è
+  \textgreek{αὐξάνω} (\emph{auxánō}), che significa “far crescere”, “aumentare”,
+  “accrescere”. Questo verbo greco e il latino \emph{augēre} (da cui \emph{auctor})
+  derivano entrambi dalla medesima radice indoeuropea: Pokorny IEW 84-85
+  {\phonfont *au̯eg-, u̯ōg-, aug-, ug-} (aumentare, incrementare, amplificare).
+} cerca di catturare la propria esperienza
+attraverso la scrittura, diventa \emph{altro} da sé. «X.» non è
+semplicemente un espediente stilistico, ma l'incarnazione del «neutro» \cite{blanchot82} — quella dimensione anonima in cui l'autore
+si dissolve nell'atto stesso della creazione. «X.» materializza questa dismissione: l'io più intimo diventa l'incognita
+più radicale perché la scrittura trasforma il soggetto scrivente in oggetto scritto.
+«X.» richiama la \textgreek{χ} (\emph{chi}), lettera che la tradizione algebrica
+ha eletto a simbolo dell'incognito, di ciò che deve essere cercato e trovato.
+Nell'atto autobiografico questa incognita non trova soluzione: la scrittura,
+anziché rivelare il sé, ne svela l'irraggiungibilità.
+
+
+% «X.» materializza questa
+% dismissione: l'io più intimo diventa l'incognita più radicale perché la scrittura
+% trasforma il soggetto scrivente in oggetto scritto. «X.» come \textgreek{χ}
+% (\emph{chi}), “cosa sconosciuta”, mostra come l'atto autobiografico, anziché
+% rivelare il sé, ne sveli l'irraggiungibilità.
+
 
 %Bertoncini non racconta di sé attraverso \emph{X.}, ma piuttosto \emph{diventa X.}.
 
 %-------------------------------------------------------------------------------
-\section*{fascino}
+%\section*{fascino}
 %-------------------------------------------------------------------------------
 
 \begin{quote}
@@ -64,22 +81,41 @@ sveli l'irraggiungibilità.
   \end{sf}
 \end{quote}
 
-Traumatico è ciò che irrompe nell'ordinario flusso dell'esperienza, creando una discontinuità che il soggetto non riesce immediatamente a integrare. E un evento che eccede la capacità di elaborazione simbolica, lasciando una sorta di "corpo estraneo" nell'economia psichica. Il ferire è un penetrare, l'attraversare, spezzando, una superficie continua.
+Traumatico è ciò che irrompe nell'ordinario flusso dell'esperienza, creando una
+discontinuità che il soggetto non riesce immediatamente a integrare. Il
+\textgreek{τραῦμα} (\emph{traûma}, “ferita” o “lesione”)
+è un evento che eccede la capacità di elaborazione simbolica, lasciando una
+sorta di “corpo estraneo” nell'economia psichica. Il ferire, che è un colpire in
+modo da rompere la continuità (di cui la ferita è lesione traumatica
+caratterizzata da soluzione di continuità), è un penetrare, un attraversare
+spezzando, una superficie continua. Verbalizzare la ferita, significa verbalizzare quella dimensione dell'esperienza
+estetica che fora, che penetra la comprensione concettuale e determina una
+trasformazione del soggetto, sotto il fitto dei colpi del fascino.
 
-Verbalizzare la ferita, significa verbalizzare quella dimensione dell'esperienza poetica che fora, penetra la
-comprensione concettuale e determina una trasformazione del soggetto.
-
-«Perché il fascino?» si chiede Blanchot? \cite{blanchot82}
+«Perché il fascino?» \cite{blanchot82}
 
 \begin{quote}
   \begin{sf}
     \small
-    Vedere presuppone la distanza, la decisione separatrice, la facoltà di non essere in contatto e di evitare la confusione del contatto. Vedere significa che tale separazione è, tuttavia, divenuta incontro. Ma cosa succede quando quel che si vede, per quanto distante, sembra toccarvi con un contatto sconvolgente, cosa succede quando il modo di vedere è una sorta di tocco, quando vedere è un contatto a distanza? Quando quel che viene visto si impone allo sguardo, come se lo guardo fosse colto, toccato, messo in contatto con l’apparenza? Non si tratta di un contatto attivo, ciò che resta ancora dell’iniziativa e dell’azione in un contatto vero e proprio, ma lo sguardo è trascinato, come assorbito in un movimento immobile e in un fondo senza profondità. Quel che ci viene dato in un contatto a distanza è l’immagine, e il fascino è la passione dell’immagine.
+    Vedere presuppone la distanza, la decisione separatrice, la facoltà di non
+    essere in contatto e di evitare la confusione del contatto. Vedere significa
+    che tale separazione è, tuttavia, divenuta incontro. Ma cosa succede quando
+    quel che si vede, per quanto distante, sembra toccarvi con un contatto
+    sconvolgente, cosa succede quando il modo di vedere è una sorta di tocco,
+    quando vedere è un contatto a distanza? Quando quel che viene visto si
+    impone allo sguardo, come se lo guardo fosse colto, toccato, messo in
+    contatto con l’apparenza? Non si tratta di un contatto attivo, ciò che resta
+    ancora dell’iniziativa e dell’azione in un contatto vero e proprio, ma lo
+    sguardo è trascinato, come assorbito in un movimento immobile e in un fondo
+    senza profondità. Quel che ci viene dato in un contatto a distanza è
+    l’immagine, e il fascino è la passione dell’immagine.
   \end{sf}
 \end{quote}
 
-Il fascino descrive quell'incontro con l'opera dove il soggetto viene come
-“destituito” dalla propria posizione di controllo.
+L'impulso determinante, quell'incontro con l'\emph{opera-operazione}, quasi traumatico,
+descrive la dimensione del fascino come evento che destituisce il soggetto dalla
+sua posizione ordinaria, dalla sua posizione di controllo. L'inconsapevolezza
+dell'evento fondativo dispone che l'esperienza preceda la coscienza.%\footnote{Fascino, Blanchot, APT: fascino(esperienza,coscienza).}.
 
 \begin{quote}
   \begin{sf}
@@ -108,40 +144,29 @@ Il fascino descrive quell'incontro con l'opera dove il soggetto viene come
   \end{sf}
 \end{quote}
 
-L'impulso determinante, quasi traumatico, descrive la dimensione del fascino
-come evento che destituisce il soggetto dalla sua posizione ordinaria.
-
-L'inconsapevolezza dell'evento fondativo richiama la struttura come esperienza
-che precede la coscienza\footnote{Fascino, Blanchot, APT: fascino(esperienza,coscienza).}.
-
-La ricerca che deriva da questo trauma suggerisce come l'enigma non si esaurisca
-mai\footnote{Approfondire: l'enigma non si esaurisc mai}. Caratteristica
-essenziale del \emph{Rätselcharakter} adorniano \cite{adorno}, l'opera-operazione
-autentica contiene possibilità poetiche senza mai consegnarsi continuamente.
-
+La ricerca che deriva da questo trauma suggerisce come l'enigma non si esaurisca,
+una caratteristica essenziale del \emph{Rätselcharakter} \cite{adorno1970}: l'\emph{opera-operazione}
+«autentica» contiene possibilità poetiche senza mai consegnarsi continuamente.
 Il mondo sonoro  inedito indica una prospettiva ontologica, un'apertura verso
 possibilità di esistenza precedentemente inaccessibili. Questo risuona con
-l'idea blanchotiana che l'arte apra spazi di alterità radicale.
-
-Con le possibilità\ldots di non aver ancora esaurito Bertoncini mantiene aperto
-l'orizzonte dell'inesplorato, preservando quel carattere enigmatico che continua
-ad orientare la ricerca.
-
-L'opera esercita una forza di attrazinoe che precede e condiziona ogni possibile
+l'idea \emph{blanchotiana} che l'arte apra spazi di alterità radicale.
+Con «le cui possibilità\ldots~di non aver ancora esaurito» Bertoncini mantiene
+aperto l'orizzonte dell'inesplorato, preservando quel carattere enigmatico che
+continua ad orientare la ricerca.
+L'opera esercita una forza di attrazione che precede e condiziona ogni possibile
 comprensione. È l'esperienza di essere afferrati, prima ancora di afferrare.
 
-Una volta in operazione, l'opera (autentica) mantiene un nucleo non riducibile
+Una volta in operazione, l'opera «autentica» mantiene un nucleo non riducibile
 al concetto, un “di più” che resiste alla spiegazione. Questo carattere
-enigmatico è condizione poetica dell'autenticità poetica.
-
-Questo “trauma fondativo” del primo incontro con l'enigma sonoro è un momento di
+enigmatico è condizione poetica dell'autenticità.
+Questo \emph{trauma fondativo} del primo incontro con l'enigma sonoro è un momento di
 vocazione, una chiamata (\emph{vocatio}) che determina un orientamento
-(esistenziale). Il fascino \cite{blanchot82} e l'enigma \cite{adorno} convergono
+(esistenziale). Il fascino \cite{blanchot82} e l'enigma \cite{adorno1970} convergono
 nel descrivere dove la soglia dell'esperienza poetica si fa esperienza di
 trasformazione.
 
 %-------------------------------------------------------------------------------
-\section*{menippo}
+%\section*{menippo}
 %-------------------------------------------------------------------------------
 
 \begin{quote}
@@ -184,7 +209,7 @@ Menippo\footnote{%
   consente l'attivazione di «scene di scandalo, comportamenti eccentrici,
   discorsi e performance inappropriati, cioè tutti i tipi di violazioni del
   corso generalmente accettato e consueto degli eventi e delle norme stabilite
-  di comportamento» e «la preoccupazione per questioni attuali e d'attualità»\cite{bakhtin84}\cite{bakhtin84}
+  di comportamento» e «la preoccupazione per questioni attuali e d'attualità» \cite{bakhtin84}
 }%
 è l'indagine classica, richiama la satira menippea, genere dialogico che mescola
 serio e giocoso, filosofia e ironia: il dialogo per esplorare contraddizioni
@@ -213,27 +238,25 @@ filosofiche. Menippo è la tradizione che attraversa i secoli.\footnote{%
   come un'immagine ridicola.
 
   *La Satire Ménippée (rif. al satirico greco Menippo) era un libello politico
-  francese che circolava a Parigi negli anni 1590.
-}» \cite{mcluhan87}
+  francese che circolava a Parigi negli anni 1590. \cite{mcluhan87}
+}»
 
-Questo \emph{polemos} articolativo e non distruttivo tra \emph{Bremonte} (la
+Questo \emph{pòlemos} articolativo e non distruttivo tra \emph{Bremonte} (la
 \emph{parola-strumento} d'invenzione, il “monte che freme”) e Menippo (la
-tradizione che frena) svela «la solitudine essenziale» in cui Bertoncini
-costruisce e abita, che Blanchot \cite{blanchot82} impagina come condizione specifica
-del lavoro artistico, e che Engelberg \cite{engelberg01}
-analizza come discorso interno «tra il Sé e il (Sé come) Altro».
+“tradizione che frena”) svela «la solitudine essenziale» in cui Bertoncini
+costruisce e abita, che Blanchot impagina come condizione
+specifica del lavoro artistico \cite{blanchot82}, e che Engelberg analizza come
+discorso interno «tra il Sé e il (Sé come) Altro» \cite{engelberg01}.
 
-Se seguissimo «il cosiddetto contenuto del libro è il lettore» ci troveremmo alla
-questione del \emph{medium}: il libro, il testo, il dialogo, l'oggetto sonoro,
-il concerto: \emph{media}.
-
-Definiti i media bertonciniani, non resta che definire il lettore, l'interprete,
-il musicista, il dialogante\ldots la separazione dal medium attivata
-dall'incantesimo del fascino innesca la possibilita di un enigma che prende
-forma nel contenuto del lettore destinatario.
+Se seguissimo la traccia de «il cosiddetto contenuto del libro è il lettore» ci troveremmo senza mezzi:
+ il libro, il testo, il dialogo, l'oggetto sonoro,
+il concerto: \emph{cosa sono?} \emph{Quali sono i contenuti delle opere di Bertoncini?} Non resta che l'azzardo della definizione di qualche lettore,
+interprete, musicista, dialogante\ldots~la «separazione» dall'opera attivata
+dall'incantesimo del fascino si proietta nell possibilita di un enigma che prende
+forma nel contenuto desiderato di un destinatario.
 
 %-------------------------------------------------------------------------------
-\section*{ricerca}
+%\section*{l'attesa}
 %-------------------------------------------------------------------------------
 
 \begin{quote}
@@ -268,7 +291,7 @@ forma nel contenuto del lettore destinatario.
       della fase finale nella costruzione della prima arpa eolia, e delle prove
       ripetute d’un sistema d’amplificazione da lui escogitato per rendere
       chiaramente percettibili quelle sonorità ricchissime ma fondamentalmente
-      al limite della della audibilità, egli è capace di ricreare e di evocare
+      al limite della audibilità, egli è capace di ricreare e di evocare
       nell’immaginazione dell’ascoltatore la stessa atmosfera gravida di attesa
       che circonda il lavoro febbrile di costruzione della campana nel film di
       A. Tarkowskij, ANDREIJ RUBLOV.
@@ -276,59 +299,89 @@ forma nel contenuto del lettore destinatario.
   \end{sf}
 \end{quote}
 
-% \subsection*{appunti da wikipedia}
-%
-% La campana, 1423: Un Duca vuol far realizzare una grande campana, ma tutti i fonditori di campane sono morti per via della peste. Boriska (Nikolaj Burljaev), il figlio di uno di questi, convince gli uomini del duca di essere a conoscenza del segreto della fusione delle campane, confidatogli dal padre prima della morte. Il compito viene affidato al ragazzo, che dirige i lavori con severità e determinazione. Alla preparazione della campana assiste anche Andrej Rublëv. Il buffone che anni fa era stato arrestato riconosce Andrej e minaccia di ucciderlo perché pensa che sia stato lui a denunciarlo in quell'occasione. Kirill riesce a calmare il buffone, e poi confida ad Andrej di essere stato lui anni prima a denunciare il buffone e lo rimprovera di non usare il talento che Dio gli ha dato, nonostante molti gli chiedano di dipingere. Il giorno dell'inaugurazione della campana Boriska è estremamente teso e inquieto. È presente tutta la popolazione e molti nobili e la campana suona perfettamente. Quando tutti se ne sono andati Boriska piange disperato. Andrej gli si avvicina e, rompendo il voto di silenzio, gli chiede perché piange; il ragazzo allora gli rivela che suo padre non gli ha mai voluto rivelare il segreto per la costruzione delle campane. Egli è riuscito nell'impresa solo grazie alla sua determinazione e alle sue capacità. Andrej allora gli propone di partire insieme: “Tu fonderai campane, io dipingerò icone”
-%
-%
-% \subsection*{appunti da Il suono del kairos e il segreto della campana}
-% Più che un film su un pittore di icone, si potrebbe dire che Andrej Rublëv è, esso stesso, un'icona. L'unità è soltanto suggerita dall'andamento paratattico fatto di episodi che, proprio come i dettagli di un'immagine sacra, derivano le dimensioni dal valore che è loro attribuito, anziché da una forzatura prospettica. Nel continuo entrare e uscire dallo sguardo dei personaggi, il momento in cui la campana inizia a suonare risulta  un punto decisivo.
-%
-% Anche se nella Russia sovietica quella delle campane viene considerata una voce di dissenso e il suono del bronzo finisce sopraffatto da quello dell'acciaio, tutto il film, così come la vita russa della tradizione, è scandito da rintocchi. Il rintocco della campana di Boriška, però, assume un significato nettamente centrale, già dalle premesse narrative: se la campana non suona, Boriška morirà (anche perché una campana ortodossa, una volta fusa non si può più ritoccare: essendo un oggetto sacro, accordarla sarebbe una sorta di sacrilegio).
-%
-% Nell'ottavo capitolo si concentra il senso della creazione artistica secondo Tarkovskij. Rublëv, Tarkovskij stesso e Boriška sono tre ipostasi della medesima idea: un'arte che tragga origine dalla collettività e che a questa ritorni. Anche se il lavoro nella fucina e il picchiare dei martelli riecheggiano l'ossessione sovietica per l'industria pesante, Boriška non è affatto un eroe del lavoro. C'è una sostanziale deviazione rispetto ai  film di argomento storico sfuggiti alle forbici negli anni precedenti: secondo Tarkovskij l'artista deve farsi servo dell'assoluto e condividerne la rappresentazione, senza alcuna glorificazione finale. Teurgia a parte, la riflessione del regista si lega alla prima avanguardia, che nelle sue varie formulazioni mirava a stimolare una sorta di completamento del film da parte dello spettatore. Per indurre una reazione autentica da parte di chi osserva, per Tarkovskij bisogna prescindere dalle convenzioni stilistiche, che equivalgono a pregiudizi, proprio come avviene in Andrej Rublëv, in cui etica ed estetica si compenetrano. La specificità del mezzo cinema deve consistere in una vera e propria scultura del tempo (in un certo senso nella sua cattura fattografica all'interno dell'inquadratura), con tutte le implicazioni filosofiche che ne derivano.
-%
-% Si potrebbe dire che con l'avvio della campana, a sua volta metafora di un'icona, Andrej Rublëv arriva persino a simulare l'esperienza della rivelazione divina: è come se Tarkovskij proponesse, nel corso del film, una guida alla lettura delle immagini sacre poi mostrate a colori nella parte finale. Si pensi alla tensione temporale dell'inquadratura in cui il pesantissimo battaglio (in russo jazyk, 'lingua') prende ad oscillare dallo sfondo al primo piano: ricalca quasi il movimento suggerito dalla cosiddetta 'prospettiva rovesciata' delle icone teorizzata da Pavel Florenskij, in base alla quale le figure sembrano avanzare in direzione dell'osservatore. Mentre si attende la manifestazione della voce divina, immagine e suono sono ancora saldate nelle inquadrature dei lentissimi cigolii. Poi, quando la campana finalmente suona, Tarkovskij cela la fonte sonora, per spostarsi su Boriška e su Rublëv. Inevitabilmente lo stacco ha l'effetto di spezzare la prevedibilità non soltanto visiva ma anche temporale di una distanza progressivamente ridotta e di creare un nuovo senso di attesa. L'agognato e imprevedibile rintocco arriva a suggerire una trasformazione del chronos, il tempo quantitativo, in kairos, un tempo qualitativo. Per Rublëv è il tempo della rivelazione e dell'incontro con Dio.
-%
-% Osservando il tutto senza tener conto di suggestioni teoriche si pone una questione: non può essere una coincidenza il fatto che il frammento del film in cui si delinea una svolta spirituale sia anche quello che più si avvicina a uno schema da cinema classico. Tarkovskij scrive che il montaggio verticale è una dittatura, eppure, nella scena delle oscillazioni, in fondo il momento di massima rigidità ideologica, conserva una precisa saldatura tra suono e immagine e ricorre a una soluzione di montaggio, con una raffinata elaborazione in campo-controcampo. Magari era questo il segreto della campana.
-%
-%
-% \subsection*{appunti bibliografici}
-%
-% Deleuze, Gilles, Cinema 1: The Movement-ImageLondon: Continuum, 2005a.
-%
-% Deleuze, Gilles, Cinema 2: The Time ImageLondon: Continuum, 2005b.
-%
-% Tarkovsky, Andrei, Sculpting in Time: Reflections on the CinemaLondon: University of Texas Press, 1988.
+È l'ottavo capitolo \cite{tarkovskij1966}, come un'ottava immagine sacra, di una processione verso un'unità
+suggerita. Il momento in cui la campana inizia a suonare risulta un
+punto decisivo: vi si cela il senso della creazione artistica. \emph{Bremonte},
+ad un passo dal raccontare quell'«epoca eroica di ricerca sonora», fa un
+passo di lato: così come nel momento del primo suonare della
+campana si salta dall'oggetto al senso (si evita la visione del rintocco), \emph{Bremonte} “taglia, cambia inquadratura”: «non sono in grado». La «tensione
+che egli riesce a comunicare quando evoca quei momenti» è dicibile solo mediante
+un'allegoria, cifrando il senso in un altro senso, perché l'oggetto allegorico è
+già di per sé un'allegoria. Per provare a comprendere cosa egli voglia dire con «la
+stessa atmosfera gravida di attesa che circonda il lavoro febbrile di
+costruzione della campana» è necessario attraversare tutti i livelli simbolici
+intercettati.
 
-%-------------------------------------------------------------------------------
-\section*{botteghe di suono}
-%-------------------------------------------------------------------------------
+\begin{quote}
+  Per noi era il simbolo dell'audacia, nel senso che la creazione richiede
+  dall'uomo l'offerta completa del proprio essere. Che si voglia volare prima
+  che sia diventato possibile, o fondere una campana senza aver imparato a
+  farlo, o dipingere un'icona -- tutti questi atti esigono che, per il prezzo della
+  sua creazione, l'uomo debba morire, dissolversi nel proprio lavoro, dare se
+  stesso interamente. Questo è il significato del prologo -- l'uomo volò e per
+  questo sacrificò la sua vita.» \cite{ciment69}
+\end{quote}
 
+Questa filosofia suggerisce che la formazione artistica può fornire competenza
+tecnica, ma la scintilla creativa essenziale deve essere accesa attraverso la
+fede, l'intuizione e la completa dedizione al lavoro stesso.  Questa comprensione
+ha implicazioni profonde per la pratica artistica: non l'auto-espressione, la
+chiamata più alta dell'artista diventa l'auto-trascendenza, creando condizioni
+entro cui le forze inconsce possano operare attraverso il “mestiere disciplinato”.
+
+Forse l'intuizione più radicale di Tarkovskij riguarda il primato della fede
+sulla conoscenza tecnica nella creazione artistica autentica. Come afferma in
+\emph{Scolpire il tempo}
+
+\begin{quote}
+  Perché egli sia consapevole che una sequenza di tali azioni è dovuta e giusta,
+  che risiede nella natura stessa delle cose, deve avere fede nell'idea, poiché solo
+  la fede interconnette il sistema di immagini [\ldots] Nell'Arte, come nella
+  religione, l'intuizione equivale alla convinzione, alla fede. [\ldots] Potremmo
+  definirlo come scolpire nel tempo. Proprio come uno scultore prende un pezzo di
+  marmo e, interiormente cosciente dei lineamenti del suo pezzo finito, rimuove tutto
+  ciò che non ne fa parte -- così il cineasta, da un “pezzo di tempo” fatto di un enorme,
+  solido aggregato di fatti viventi, taglia e scarta tutto ciò di cui non ha bisogno.
+\end{quote}
+
+È nelle trasduzioni tra tempi cronologici e kairotici che l'asse Bertoncini Tarkovskij
+attiva un segno comune: Tarkovskij scolpisce immagini nel tempo, che solo il tempo può animare; Bertoncini scolpisce
+il tempo nel vento, che\ldots
+
+\begin{quote}
+Poco dopo, nel 1970, studiavo composizione con lui a Roma. Era davvero come essere apprendista in una bottega del ‘500. \cite{nottoli2019}
+\end{quote}
 
 Mario Bertoncini sta all'aria compressa come Prometeo sta al fuoco. Mario era un
-uomo di Bottega. Il Laboratorio è il momento di catastrofe in cui egli ha
+uomo di Bottega. Il Laboratorio è il momento di \emph{catastrofe}\footnote{%
+  Dal greco \textgreek{καταστροφή} (\emph{katastrophḗ}), composto da
+  \textgreek{κατά} (\emph{katá}, "giù, verso il basso") e \textgreek{στροφή}
+  (\emph{strophḗ}, "voltare, girare"): propriamente "rivolgimento",
+  "capovolgimento". In ambito teatrale indica il momento risolutivo del dramma;
+  in matematica, la teoria delle catastrofi di René Thom \cite{thom1972} studia
+  i cambiamenti qualitativi improvvisi nei sistemi dinamici. Qui: il momento
+  di trasformazione radicale in cui l'aria selvaggia diventa strumento d'arte.
+} in cui egli ha
 addomesticato l'aria. Il laboratorio di Mario è il pensiero, come in Schoenberg,
 come in Nono.
 
-Le opere di Mario, oggi, dopo Mario, appaiono come botteghe di suono. Il
-progetto bottega che mosso la sua intera esistenza è presente, oggi, in ogni
-traccia della sua eredità. È nostro compito vivere quei luoghi, comprendere le
-sue parole per curare la sua costruzione.
+Le opere di Mario, oggi, dopo Mario, appaiono come \emph{botteghe di suono}: elementi udibili di un assoluto. Il
+progetto «bottega» che ha mosso la sua intera esistenza è presente, oggi, in ogni
+traccia della sua eredità. È nostro dovere vivere quei luoghi, dialogare con i suoi personaggi, tenere in ordine i suoi strumenti, la sua Bottega.
 
-\begin{quote}
-\verbatim
-Come onorare la musica\\
-ascoltarla senza agire\\
-senza sequenze di commenti\\
-come tacere non di fronte\\
-ma dentro la musica\\
-come lasciare che mi disfi\\
+\null\vfill
+\begin{verbatim}
+Come onorare la musica
+ascoltarla senza agire
+senza sequenze di commenti
+come tacere non di fronte
+ma dentro la musica
+come lasciare che mi disfi
 il cuore e mi scombini il pensiero.
-Un paesaggio sonoro\\
-ci affronta ovunque e ci invita:\\
-essere musica è fuga dal rumore\\
-è orecchio sinfonico\\
-verso la voce del silenzio\\
+Un paesaggio sonoro
+ci affronta ovunque e ci invita:
+essere musica è fuga dal rumore
+è orecchio sinfonico
+verso la voce del silenzio
 verso la conta di quello che resta.
-\end{quote}
+\end{verbatim}
