--- a/src/v03/come-un-allpass/2025-08-31-come-un-allpass-impaginato.tex
+++ b/src/v03/come-un-allpass/2025-08-31-come-un-allpass-impaginato.tex
@@ -20,8 +20,8 @@
 
 \usepackage{enumitem}
 
-\title{come un filtro AllPass}
-\subtitle{autobiografia di un eretico. appunti revb.}
+\title{il sogno radicale}
+\subtitle{autobiografia di un eretico. appunti revb.\\[1cm] \textbf{\large come un filtro AllPass}}
 \author{Giuseppe Silvi}
 \date{\today}
 
@@ -44,7 +44,7 @@
 
 \maketitle
 
-\input{2025-08-31-come-un-allpass_2.tex}
+\input{2025-08-31-come-un-allpass_3.tex}
 
 \clearpage
 
