--- a/src/bibliografia.bib
+++ b/src/bibliografia.bib
@@ -300,3 +300,70 @@
     address = {Milano},
     pages = {192}
 }
+
+@incollection{ciment69,
+  author = {Michel Ciment and Luda Schnitzer and Jean Schnitzer},
+  title = {The Artist in Ancient Russia and in the New USSR},
+  booktitle = {Andrei Tarkovsky: Interviews},
+  editor = {John Gianvito},
+  publisher = {University Press of Mississippi},
+  address = {Jackson},
+  year = {2006},
+  pages = {26},
+  note = {Originariamente pubblicata nel 1969}
+}
+
+@book{bertoncini07,
+  author    = {Bertoncini, Mario},
+  title     = {Arpe eolie e altre cose inutili},
+  publisher = {Die Schachtel},
+  year      = {2007},
+}
+
+@book{valerio16,
+  title={Storia umana della matematica},
+  author={Valerio, Chiara},
+  series={ET Scrittor},
+  year={2016},
+  publisher={Einaudi}
+}
+
+@book{adorno1970,
+  author    = {Adorno, Theodor W.},
+  title     = {Teoria estetica},
+  originaltitle = {Ästhetische Theorie},
+  editor    = {Gretel Adorno and Rolf Tiedemann},
+  publisher = {Einaudi},
+  year      = {2009},
+  address   = {Torino},
+  note      = {Edizione originale: Frankfurt am Main, Suhrkamp Verlag, 1970}
+}
+
+@movie{tarkovskij1966,
+  title        = {Andrej Rublëv},
+  director     = {Tarkovskij, Andrej},
+  year         = {1966},
+  type         = {Film},
+  productioncompany = {Mosfil'm},
+  country      = {URSS},
+  runtime      = {183 min.},
+  note         = {Sceneggiatura: Andrej Tarkovskij e Andrej Končalovskij. Fotografia: Vadim Jusov}
+}
+
+@misc{nottoli2019,
+  author = {Nottoli, Giorgio},
+  title = {Breve riflessione su Mario Bertoncini},
+  year = {2019}
+}
+  
+@book{thom1972,
+  author    = {Thom, René},
+  title     = {Stabilità strutturale e morfogenesi},
+  originaltitle = {Stabilité structurelle et morphogénèse},
+  subtitle  = {Saggio di una teoria generale dei modelli},
+  publisher = {Einaudi},
+  year      = {1980},
+  address   = {Torino},
+  series    = {Biblioteca di cultura scientifica},
+  note      = {Edizione originale: Paris, W.A. Benjamin, 1972}
+}
