--- a/src/v03/botteghe-di-suono/2025-09-10-botteghe-di-suono.tex
+++ b/src/v03/botteghe-di-suono/2025-09-10-botteghe-di-suono.tex
@@ -16,7 +16,10 @@ di ciò che è Bottega, Laboratorio e Opera? In che modo la lettura dei suoi
 scritti può svelare un principio di operazione?}
 
 La metodologia dialettica di Bertoncini impone un momento di riflessione
-sull'equilibrio \emph{opera-operazione} messo in scena. La sua scrittura è un
+sull'equilibrio \emph{opera-operazione}\footnote{
+  Appunti sulla tensione opera-operazione:\\
+  \url{https://github.com/grammaton/il-sogno-radicale/blob/bf51bade8fa8ea7be60f7df9d57efe19a7c4a1d9/src/v03/opera-operazione/2025-10-26-opera-operazione-impaginato.pdf}
+} messo in scena. La sua scrittura è un
 teatro dell'intelletto, un'immaginario e, insieme, uno scenario, quindi uno
 spazio scenico e un'ambientazione, dove il pensiero si rappresenta attraverso
 persone multiple, in una forma possibile di \emph{sympòsion} emergente. Una
@@ -35,7 +38,7 @@ catabatico, fresco, ciclico, il vento soffiato dalla montagna sulla valle.
 \emph{Bremonte} è, come ogni opera di Bertoncini, un enigma naturale, un momento
 di realtà. L'esplorazione umana è mossa dalla volontà di decodifica di enigmi,
 la realtà del mondo necessità volontà di soluzione, che poi chiamiamo verità,
-verità supposte\ldots~%a creazione di enigmi è tensione, tendenza alla natura. 
+verità supposte\ldots~%a creazione di enigmi è tensione, tendenza alla natura.
 
 %L'uso di \emph{X.} per l'io autobiografico rivela un tratto fondamentale: nel
 Nel momento stesso in cui l'autore\footnote{%
@@ -147,7 +150,7 @@ dell'evento fondativo dispone che l'esperienza preceda la coscienza.%\footnote{F
 La ricerca che deriva da questo trauma suggerisce come l'enigma non si esaurisca,
 una caratteristica essenziale del \emph{Rätselcharakter} \cite{adorno1970}: l'\emph{opera-operazione}
 «autentica» contiene possibilità poetiche senza mai consegnarsi continuamente.
-Il mondo sonoro  inedito indica una prospettiva ontologica, un'apertura verso
+Il «mondo sonoro»  inedito indica una prospettiva ontologica, un'apertura verso
 possibilità di esistenza precedentemente inaccessibili. Questo risuona con
 l'idea \emph{blanchotiana} che l'arte apra spazi di alterità radicale.
 Con «le cui possibilità\ldots~di non aver ancora esaurito» Bertoncini mantiene
@@ -214,7 +217,8 @@ Menippo\footnote{%
 è l'indagine classica, richiama la satira menippea, genere dialogico che mescola
 serio e giocoso, filosofia e ironia: il dialogo per esplorare contraddizioni
 filosofiche. Menippo è la tradizione che attraversa i secoli.\footnote{%
-  Marshall McLuhan nella lettera a Michael Hornyansky del  3 febbraio 1976 scrive:
+  Marshall McLuhan nella lettera a Michael Hornyansky del 3 febbraio 1976
+  scrive:
 
   Caro Professor Hornyansky,
   Uno studente in un seminario ha recentemente citato alcuni suoi commenti
@@ -344,12 +348,13 @@ sulla conoscenza tecnica nella creazione artistica autentica. Come afferma in
   solido aggregato di fatti viventi, taglia e scarta tutto ciò di cui non ha bisogno.
 \end{quote}
 
-È nelle trasduzioni tra tempi cronologici e kairotici che l'asse Bertoncini Tarkovskij
-attiva un segno comune: Tarkovskij scolpisce immagini nel tempo, che solo il tempo può animare; Bertoncini scolpisce
-il tempo nel vento, che\ldots
+È nelle trasduzioni tra tempi cronologici e kairotici che l'asse Bertoncini
+Tarkovskij attiva un segno comune: Tarkovskij scolpisce immagini nel tempo, che
+solo il tempo può animare; Bertoncini scolpisce il tempo nel vento, che\ldots
 
 \begin{quote}
-Poco dopo, nel 1970, studiavo composizione con lui a Roma. Era davvero come essere apprendista in una bottega del ‘500. \cite{nottoli2019}
+Poco dopo, nel 1970, studiavo composizione con lui a Roma. Era davvero come
+essere apprendista in una bottega del ‘500. \cite{nottoli2019}
 \end{quote}
 
 Mario Bertoncini sta all'aria compressa come Prometeo sta al fuoco. Mario era un
@@ -359,15 +364,16 @@ uomo di Bottega. Il Laboratorio è il momento di \emph{catastrofe}\footnote{%
   (\emph{strophḗ}, "voltare, girare"): propriamente "rivolgimento",
   "capovolgimento". In ambito teatrale indica il momento risolutivo del dramma;
   in matematica, la teoria delle catastrofi di René Thom \cite{thom1972} studia
-  i cambiamenti qualitativi improvvisi nei sistemi dinamici. Qui: il momento
-  di trasformazione radicale in cui l'aria selvaggia diventa strumento d'arte.
+  i cambiamenti qualitativi improvvisi nei sistemi dinamici.
 } in cui egli ha
 addomesticato l'aria. Il laboratorio di Mario è il pensiero, come in Schoenberg,
 come in Nono.
 
-Le opere di Mario, oggi, dopo Mario, appaiono come \emph{botteghe di suono}: elementi udibili di un assoluto. Il
-progetto «bottega» che ha mosso la sua intera esistenza è presente, oggi, in ogni
-traccia della sua eredità. È nostro dovere vivere quei luoghi, dialogare con i suoi personaggi, tenere in ordine i suoi strumenti, la sua Bottega.
+Le opere di Mario, oggi, dopo Mario, appaiono come \emph{botteghe di suono}:
+elementi udibili di un assoluto. Il progetto «bottega» che ha mosso la sua
+intera esistenza è presente, oggi, in ogni traccia della sua eredità. È nostro
+dovere vivere quei luoghi, dialogare con i suoi personaggi, tenere in ordine i
+suoi strumenti, la sua Bottega.
 
 \null\vfill
 \begin{verbatim}
